[package]
name = "kairs"
version = "0.2.1"
edition = "2021"


[features]
hf-hub = ["dep:hf-hub"]

[dependencies]
anyhow = "1.0.85"
serde_json = "1.0.117"
tokenizers = "0.19.1"
candle-core = "0.5.0"
candle-nn = "0.5.0"
candle-transformers = "0.5.0"
jni = "0.21.1"
hf-hub = { version = "0.3.2", optional = true }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"

[[bench]]
name = "cos_sim"
harness = false
required-features = ["hf-hub"]

[[example]]
name = "cos_sim"
required-features = ["hf-hub"]

[[test]]
name = "cos_sim"
required-features = ["hf-hub"]

[[test]]
name = "pipeline"
required-features = ["hf-hub"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
